--- a/webroot/scss/defs.scss
+++ b/webroot/scss/defs.scss
@@ -131,6 +131,8 @@ $triangle-center-position: 0.5 * $orb-card-button-width - $triangle-border-width
 $price-matrix-header-padding: 0 ($orb-card-price-table-padding-right - $orb-card-scrollbar-width) 0 $orb-card-price-table-padding-left;
 $price-matrix-header-height: $h5-font-size;
 $price-matrix-max-height: $orb-card-row-height - $price-matrix-header-height;
+$float-label-exposed-bottom: (0.5 * $orb-card-height) - $orb-card-vertical-margin;
+$float-label-exposed-margin: -0.5 * $orb-card-height + $h3-font-size ;
 
 /*  MONTHLY  CONTENT  */
 $monthly-content-wrapper-width: $row-width - ($column-gutter + $orbcat-menu-width + 2 * $float-pane-margin + $user-activity-panel-width);
