--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5246,10 +5246,10 @@ nav#login {
     max-height: 150px;
     width: 100%; }
 
+
 main#splash {
-  background-image: url('../img/splash/pizza-bg.jpg');
-  background-size: cover, 30%;
-  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
   z-index: 9000;
   vertical-align: middle;
   transition: background-image 0.3s ease-in-out; }
@@ -5275,9 +5275,9 @@ main#splash {
   main#splash #splash-circle-wrapper {
     width: 100%; }
   main#splash #splash-circle {
-    min-height: 25rem;
+    min-height: 12.5rem;
     height: 100%;
-    min-width: 25rem;
+    min-width: 12.5rem;
     width: auto;
     background-image: url('../img/splash/bluecircle.png');
     background-position: center;
@@ -5456,8 +5456,6 @@ body {
   body .menu {
     background-image: url("../img/menu_bg.xlg.bright.jpg");
     overflow: auto; }
-  body .splash {
-    overflow: hidden; }
 
 main#menu {
   position: relative;
