webkit 3d transforms fixed

--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -4898,9 +4898,15 @@ th.hide-for-touch {
   backface-visibility: hidden; }
 
 .back-face-x {
+  -webkit-transform: rotateX(180deg);
+  -moz-transform: rotateX(180deg);
+  -o-transform: rotateX(180deg);
   transform: rotateX(180deg); }
 
 .back-face-y {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
   transform: rotateY(180deg); }
 
 @font-face {
