--- a/webroot/scss/3d.scss
+++ b/webroot/scss/3d.scss
@@ -41,5 +41,15 @@
   -o-backface-visibility      : hidden;
   backface-visibility         : hidden;
 }
-.back-face-x {  transform : rotateX(180deg); }
-.back-face-y {  transform : rotateY(180deg); }
+.back-face-x {
+  -webkit-transform : rotateX(180deg);
+   -moz-transform    : rotateX(180deg);
+   -o-transform      : rotateX(180deg);
+   transform         : rotateX(180deg);
+}
+.back-face-y {
+  -webkit-transform : rotateY(180deg);
+    -moz-transform    : rotateY(180deg);
+    -o-transform      : rotateY(180deg);
+    transform         : rotateY(180deg);
+}
