--- a/webroot/scss/_settings.scss
+++ b/webroot/scss/_settings.scss
@@ -130,7 +130,7 @@ $header-font-color: white;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
-// $header-text-rendering: optimizeLegibility;
+$header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
 // $h1-font-size: rem-calc(44);
